# AoC

./: .gitignore
2015/: init.bat
2015/Day01/: d1p1.cpp  d1p2.cpp
2015/Day03/: d3p1.cpp  d3p2.cpp
2015/Day05/: d5p2.cpp
2015/Day08/: d8.cpp  d8p2.cpp
2015/Day09/: d9.py
2015/Day10/: d10.cpp
2015/Day11/: d11.cpp
2015/Day12/: d12.cpp  d12p2.cpp
2015/Day13/: d13p2.cpp
2015/Day14/: d14.cpp  d14p2.cpp
2015/Day15/: d15.cpp
2015/Day2/: d2p1.cpp  d2p2.cpp
2015/Day4/: d4p1.cpp  d4p2.cpp
2015/Day5/: d5p1.cpp
2015/Day6/: d6p1.cpp  d6p2.cpp
2015/Day7/: d7p1.cpp  d7p2.cpp
2021/Day01/: day01.cpp  day01p2.cpp
2021/Day01/rust/: main.rs
2021/Day02/: day02.cpp
2021/Day03/src/: main.rs
2021/Day04/src/: main.rs  part1.rs
2022/Day 1/: day1.c
2022/Day 2/: day2a.c
2022/Day 20/: bla.txt
2022/Day 21/: output.txt
2022/Day 3/: day3.c
2022/Day 4/: day4.c
2022/Day01/: day1.c
2022/Day02/: day2b.c
2022/Day03/: day3_2.c
2022/Day04/: day4.c
2022/Day05/: d5.cpp  d5p2.cpp
2022/Day06/: d6p1.cpp  d6p2.cpp
2022/Day07/: d7p1.cpp  d7p2.cpp
2022/Day08/: day8.c
2022/Day09/: d9p1.cpp
2022/Day09/include/: aocutils.h
2022/Day11/: d11p1.cpp  d11p2.cpp
2022/Day12/: d12p1.cpp  d12p2.cpp
2022/Day13/: Cargo.toml
2022/Day13/src/: main.rs  old.rs
2022/Day20/: Day20_1.c  Day20_2.c
2022/Day21/: Day21.c
2023/: fixFolders.bat  template.cpp
2023/Day02/: d2p1.cpp  d2p2.cpp
2023/Day03/: d3p1.cpp
2023/Day06/: d6p1.cpp  d6p2.cpp  d6p2_quick_maths.cpp
2023/Day07/: d7p1.cpp
2023/Day08/: d8p2.cpp
2023/Day1/: d1p1.cpp  d1p2.cpp
2023/Day10/: d10p1.cpp  d10p2.cpp  test  test2
2023/Day11/: d11p2.cpp
2023/Day12/: d12p1.cpp  d12p2.cpp
2023/Day13/: d13p1.cpp  d13p2.cpp
2023/Day14/: d14.cpp
2023/Day15/: d15p1.cpp  d15p2.cpp
2023/Day16/: d16p1.cpp  d16p2.cpp
2023/Day17/: CMakeLists.txt  d17.cpp  d17both copy.cpp  d17both.cpp  d17p1.cpp  d17p2.cpp  test
2023/Day18/: d18p1.cpp  d18p2.cpp
2023/Day19/: CMakeCache.txt  CMakeLists.txt  d19p1.cpp  d19p2.cpp  test.cpp  test1
2023/Day2/: d2p1.cpp
2023/Day20/: d20.cpp  d20p2.cpp  test.cpp
2023/Day21/: d21p1.cpp  d21p2.cpp
2023/Day22/: d22p1.cpp
2023/Day23/: d23p1.cpp  d23p2.cpp  notes
2023/Day24/: d24p1.cpp  d24p2.cpp  d24yoink.cpp  notes
2023/Day24/Test/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
2023/Day24/Test/src/: main.cpp
2023/Day25/: d25.cpp  d25p1.cpp
2023/Day3/: d3p2.cpp
2023/Day4/: d4p1.cpp  d4p2.cpp
2023/Day5/: d5.cpp  d5p2.cpp
2023/Day6/: d6.cpp  d6p1.cpp  d6p2.cpp  d6p2_quick_maths.cpp
2023/Day7/: d7p1.cpp  d7p2.cpp
2023/Day8/: d8p1.cpp  d8p2.cpp
2023/Day9/: d9p1.cpp  d9p2.cpp
2024/Day01/: Cargo.toml
2024/Day01/src/: main.rs
2025/Day01/: CMakeLists.txt  input.txt
2025/Day01/src/: day1.cpp
2025/Day02/: CMakeLists.txt  input.txt
2025/Day02/include/: aocutils.h
2025/Day02/src/: day2.cpp
template/: CMakeLists.txt
template/include/: aocutils.h
template/src/: day@DAY@.cpp
